--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 
     //depend for generator
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+   //for circle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 
