--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QR">
 
+        <activity
+            android:name=".Profil"
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
 
         <activity
@@ -23,16 +30,11 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
-
-
-
-
         <activity
             android:name=".DashboardTeacher"
             android:exported="false"
@@ -40,29 +42,19 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
-                android:value="" /> </activity>
-
-
-
-
-
-
-        <activity android:name=".QrGenerator"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".QrGenerator"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
-
-
-
-
-
-
         <activity
             android:name=".LoginActivity"
             android:exported="false"
@@ -71,17 +63,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
-
-
-
-
-
-        <activity android:name=".scannerView"></activity>
-
-
-
+        <activity android:name=".scannerView" />
 
         <activity
             android:name=".choose"
@@ -93,11 +75,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-
-
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar" />
